third_party/move/move-compiler-v2/tests/lambda/inline-parity/bug_10991a.exp

Diagnostics:
error: Only inline functions may have function-typed parameters, but non-inline function `Test::foo` has function parameters:
  ┌─ tests/lambda/inline-parity/bug_10991a.move:3:9
  │
3 │     fun foo(f:|u64, u64| u64, g: |u64, u64| u64,
  │         ^^^ -                 - Parameter `g` has function-valued type `|(u64, u64)|u64`.
  │             │
  │             Parameter `f` has function-valued type `|(u64, u64)|u64`.
4 │     h:|u64, u64| u64, i: |u64, u64| u64,
  │     -                 - Parameter `i` has function-valued type `|(u64, u64)|u64`.
  │     │
  │     Parameter `h` has function-valued type `|(u64, u64)|u64`.
